# telekyb

./: README.md
telekyb_algo/telekyb_calculus/: CMakeLists.txt  package.xml
telekyb_algo/telekyb_calculus/src/: CMakeLists.txt  TestCalculus.cpp
telekyb_algo/telekyb_calculus/src/Potentials/: PotentialFunction.cpp
telekyb_behaviors/telekyb_behaviors/: CMakeLists.txt  package.xml
telekyb_behaviors/tk_be_common/: CMakeLists.txt  mainpage.dox  package.xml
telekyb_behaviors/tk_be_common/src/: DynamicFlyTo.hpp  EmergencyEscape.cpp  EmergencyEscape.hpp  EmergencyEscape_Calibrate.hpp  FiltFlyTo.hpp  FixedPointHover.hpp  HumanOperator.cpp  HumanOperator.hpp  LinearFlyTo.cpp  LinearFlyTo.hpp  RCJoy.hpp  RoboCentricOmega6Joy.cpp  RoboCentricOmega6Joy.hpp  SmoothLinearFlyTo.cpp  TeleopPoint.cpp  Teleoperation.cpp  Teleoperation.hpp  TrajPlayback.cpp  TrajectoryForceInput.cpp  TrajectoryForceInput.hpp  TrajectoryInput.cpp  ViconFreeLand.cpp  mpcPathFollow.cpp  mpcPathFollow.hpp
telekyb_behaviors/tk_be_common/src/EmergencyEscape/: Controller.cpp  LinearModel.cpp  Reward.cpp  thetamatrix.txt
telekyb_common/telekyb_base/: CMakeLists.txt
telekyb_common/telekyb_base/include/telekyb_base/: Filter.hpp  Options.hpp  ROS.hpp  Time.hpp
telekyb_common/telekyb_base/src/: TestClass.cpp
telekyb_common/telekyb_base/src/Filter/: FirFilter.cpp  OneEuroFilter.cpp
telekyb_common/telekyb_base/src/Messages/: TKTrajectory.cpp
telekyb_common/telekyb_base/src/Options/: RawOptionsContainer.cpp
telekyb_common/telekyb_base/src/ROS/: ROSModule.cpp  ROSOptionController.cpp
telekyb_common/telekyb_base/src/Spaces/: Angle.cpp
telekyb_common/telekyb_base/src/Time/: Time.cpp
telekyb_common/telekyb_base/src/Tools/: XmlRpcHelper.cpp  YamlHelper.cpp
telekyb_common/telekyb_common/: CMakeLists.txt  package.xml
telekyb_common/telekyb_defines/: CMakeLists.txt  manifest.xml.backup  package.xml
telekyb_common/telekyb_defines/include/telekyb_defines/: ClassInterfaces.hpp  physic_defines.hpp  telekyb_enums.hpp
telekyb_common/telekyb_msgs/: manifest.xml.backup  package.xml
telekyb_common/telekyb_msgs/msg/: StampedPointArray.msg  TKGRCommands.msg  TKLLCommands.msg  TKMotorCommands.msg  TKState.msg  TKTrajectory.msg
telekyb_common/telekyb_srvs/: CMakeLists.txt  mainpage.dox  package.xml
telekyb_common/telekyb_srvs/srv/: BehaviorInput.srv  BehaviorInputOutput.srv  BehaviorOutput.srv  BinOccupancySrv.srv  BoolInput.srv  DHDToggleForce.srv  GetOptionMapping.srv  IntArrayInput.srv  MKValueInputOutput.srv  StringOutput.srv
telekyb_common/tk_draft_msgs/: CMakeLists.txt  manifest.xml.backup  package.xml
telekyb_common/tk_draft_msgs/msg/: ForceTorque.msg  LeapFingerTip.msg  PvtolArmState.msg  SegmentObstacles.msg  TKBLCommands.msg  TKLines.msg  TKSmallImu.msg  TKSmoothTraj.msg  proc_data.msg
telekyb_drivers/telekyb_drivers/: CMakeLists.txt  package.xml
telekyb_drivers/telekyb_joystick/: CMakeLists.txt  mainpage.dox  manifest.xml.backup  package.xml
telekyb_drivers/telekyb_joystick/src/: JoystickOptions.cpp
telekyb_drivers/telekyb_serial/: CMakeLists.txt  mainpage.dox  package.xml
telekyb_drivers/telekyb_serial/include/telekyb_serial/: SerialDevice.h  SerialException.h  SerialHelper.hpp
telekyb_drivers/telekyb_serial/src/telekyb_serial/: SerialDevice.cpp  ThreadedSerialDevice.cpp
telekyb_gazebo/: CMakeLists.txt  package.xml
telekyb_gazebo/Media/materials/scripts/: carpet.material
telekyb_gazebo/launch/: .directory  box.launch  demo_turtlebot_mapping.launch  empty.launch  firefly_13.launch  qc13.launch  qc13_aruco.launch  remap.launch  rgbd_mapping.launch  simple_obstacles.launch  spawn_firefly_withID.launch  spawn_firefly_withID_NO_ASUS.launch  spawn_hector_quad_withID.launch  spawn_sujitfly_with_ID.launch  state_publisher.launch  telekybCore.launch
telekyb_gazebo/resource/: power_plant.bt  power_plant_withWalls.bt
telekyb_gazebo/src/: qcfireflyGazeboInterface.cpp
telekyb_gazebo/urdf/: ARUCOtag110.urdf  ARUCOtag330.urdf  asus_camera.urdf.xacro  carpet.urdf  firefly.urdf.xacro  firefly_13.gazebo.xacro  generic_camera.urdf.xacro  multirotor_base.urdf.xacro  qc13.urdf.xacro  qc13_aruco_sensors.urdf.xacro  qc13_xtion.urdf.xacro  qc13_xtion_aruco.urdf.xacro  sujitfly.urdf.xacro  sujitfly_multirotor_base.urdf.xacro  sujitfly_with_ID.gazebo.xacro  xtion.urdf.xacro
telekyb_gazebo/worlds/: box.world  simple_obstacles.world
telekyb_interfaces/tk_gazebo_interface/: CMakeLists.txt  package.xml
telekyb_interfaces/tk_gazebo_interface/launch/: t3_1.launch  t3_2.launch  t3_3.launch
telekyb_interfaces/tk_gazebo_interface/src/: solution.cpp
telekyb_interfaces/tk_mkinterface/: CMakeLists.txt
telekyb_interfaces/tk_mkinterface/include/tk_mkinterface/: MKData.hpp  MKInterfaceConnection.hpp  MKInterfaceConnectionOptions.hpp  MKROSInterfaceOptions.hpp  MKValue.hpp
telekyb_interfaces/tk_mkinterface/src/mk_tests/: mk_test1.cpp  mk_test2.cpp
telekyb_interfaces/tk_mkinterface/src/tk_mkinterface/: MKCalibrator.cpp  MKData.cpp  MKInterface.cpp  MKInterfaceOptions.cpp  MKROSInterface.cpp  MKSafeMod.cpp
telekyb_main/telekyb_core/: CMakeLists.txt  package.xml
telekyb_main/telekyb_core/cfg/: UAVcontrolParameters.cfg
telekyb_main/telekyb_core/include/telekyb_core/: TeleKybCore.hpp  TeleKybCoreOptions.hpp
telekyb_main/telekyb_core/launch/: telekyb_core.launch
telekyb_main/telekyb_core/src/: CMakeLists.txt.bak
telekyb_main/telekyb_core/src/Utils/: CMakeLists.txt
telekyb_main/telekyb_core/src/telekyb_core/: CMakeLists.txt.bak  Main.cpp  TeleKybCoreInterface.cpp  TeleKybCoreOptions.cpp
telekyb_main/telekyb_main/: package.xml
telekyb_main/tk_behavior/: CMakeLists.txt  mainpage.dox
telekyb_main/tk_behavior/include/behaviors/: EmergencyLand.hpp  Ground.hpp  Hover.hpp  Land.hpp  NormalBrake.hpp  (+1 more)
telekyb_main/tk_exception/: CMakeLists.txt  package.xml
telekyb_main/tk_obstacle/: CMakeLists.txt  mainpage.dox  package.xml
telekyb_main/tk_obstacle/src/: CMakeLists.txt.bak  Main.cpp
telekyb_main/tk_traj_controllers/: CMakeLists.txt  package.xml  trajectory_tracker_plugins.xml
(+177 files in other folders)
