<package>
  <name>telekyb_calculus</name>
  <version>1.0.0</version>
  <description>telekyb_calculus contains calculus elements like artifical potential functions...</description>
  <maintainer email="johannes.laechele@tuebingen.mpg.de">Johannes Laechele</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/telekyb_calculus</url>
  

  <author>Martin Riedel</author>

  
  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>roscpp</build_depend>
  <build_depend>telekyb_base</build_depend>
  <build_depend>telekyb_defines</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>telekyb_base</run_depend>
  <run_depend>telekyb_defines</run_depend>
  
  
  

<export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ltelekyb_calculus" />
</export>

<!--This file was altered by an automated script. Trying to alter xml files to fullfill the requirements 
for the catkin hydro standart in ros. This means there maight be some tags which 
do not make sense I did my best to guess the correct answers.  -->
</package>
