<package>
  <name>telekyb_behaviors</name>
  <version>3.0.0</version>
  <description>telekyb_behaviors</description>
  <maintainer email="matrin.riedel@tuebingen.mpg.de">Maintained by Martin Riedel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/telekyb_behaviors</url>
  

  <author>Maintained by Martin Riedel</author>

  
  <buildtool_depend>catkin</buildtool_depend>

  


  
  <run_depend>tk_be_common</run_depend>

  






 <export>
   <metapackage />
 </export>
 </package>
