<package>
  <name>tk_be_common</name>
  <version>1.0.0</version>
  <description>tk_be_common contains often used Behaviors</description>
  <maintainer email="Johannes.laechele@tuebingen.mpg.de">Johannes Laechele</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/tk_be_common</url>
  
  <author>Martin Riedel</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tk_behavior</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>telekyb_base</build_depend>
  <build_depend>telekyb_interface</build_depend>
  <build_depend>telekyb_base</build_depend>
  <build_depend>telekyb_defines</build_depend>
  <build_depend>telekyb_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tk_behavior</run_depend>
  <run_depend>telekyb_base</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>telekyb_interface</run_depend>
  <run_depend>telekyb_base</run_depend>
  <run_depend>telekyb_defines</run_depend>
  <run_depend>telekyb_msgs</run_depend>
<export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ltk_be_common" />

    <tk_behavior plugin="${prefix}/behavior_plugins.xml" />
</export>

<!--This file was altered by an automated script. Trying to alter xml files to fullfill the requirements for the catkin hydro standart in ros. This means there maight be some tags which do not make sense I did my best to guess the correct answers.  --></package>
