<package>
	<name>telekyb_common</name>
	<version>3.0.0</version>
	<description>
	    This package provides common features for telekyb but is only a metapackage.
    </description>
	<maintainer email="eugen.ruff@tuebingen.mpg.de">Eugen Ruff</maintainer>
	<license>BSD</license>
	<url>http://ros.org/wiki/telekyb_common</url>
	<author>Martin Riedel</author>

	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>telekyb_msgs</run_depend>
	<run_depend>telekyb_srvs</run_depend>
	<run_depend>telekyb_base</run_depend>
	<run_depend>telekyb_defines</run_depend>
	<run_depend>tk_draft_msgs</run_depend>

	<export>
		<metapackage />
	</export>

</package>
