<package>
  <name>telekyb_defines</name>
  <version>3.0.0</version>
  <description>telekyb_defines contains header definition that are used throughout the telekyb scope. Also contains compiled
     Definitions of Operators etc.</description>
  <maintainer email="eugen.ruff@tuebingen.mpg.de">Eugen Ruff</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/telekyb_defines</url>
  

  <author>Dr. Antonio Franchi and Martin Riedel</author>

  
  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend> 
  <build_depend>telekyp_srvs</build_depend>
  <!-- <build_depend>telekyb_msgs</build_depend> -->

  <run_depend>roscpp</run_depend>  
  

  

<export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ltelekyb_defines" />
</export>


</package>
