<package>
  <name>telekyb_msgs</name>
  <version>3.0.0</version>
  <description>telekyb_msgs contains custom messages used throughout telekyb.</description>
  <maintainer email="eugen.ruff@tuebingen.mpg.de">Eugen Ruff</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/telekyb_msgs</url>
  

  <author>Dr. Antonio Franchi and Martin Riedel</author>

  
  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>  
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  

</package>
