<package>
  <name>telekyb_srvs</name>
  <version>3.0.0</version>
  <description>telekyb_srvs contains custom services used throughout the telekyb stack</description>
  <maintainer email="eugen.ruff@tuebingen.mpg.de">Eugen Ruff</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/telekyb_srvs</url>
  

  <author>Dr. Antonio Franchi and Martin Riedel</author>

  
  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>std_srvs</build_depend>
  <build_depend>telekyb_msgs</build_depend>

  
  <run_depend>std_srvs</run_depend>
  <run_depend>telekyb_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  
  
  

</package>
