<package>
  <name>tk_draft_msgs</name>
  <version>3.0.0</version>
  <description>tk_draft_msgs contains messages that are still under development or not intented for permanent use.</description>
  <maintainer email="eugen.ruff@tuebingen.mpg.de">Eugen Ruff</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/tk_draft_msgs</url>
  

  <author>Martin Riedel</author>

  
  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>telekyb_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>telekyb_msgs</run_depend>

  
  


</package>
