<package>
  <name>telekyb_drivers</name>
  <version>3.0.0</version>
  <description>telekyb_drivers</description>
  <maintainer email="eugen.ruff@tuebingen.mpg.de">Eugen Ruff</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/telekyb_drivers</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Eugen Ruff</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>telekyb_serial</run_depend>
  <run_depend>telekyb_joystick</run_depend>

  <!-- Dependencies needed only for running tests. -->





</package>
