<package>
  <name>telekyb_serial</name>
  <version>3.0.0</version>
  <description>telekyb_serial provides an abstract library to access Serial Devices</description>
  <maintainer email="eugen.ruff@tuebingen.mpg.de">Eugen Ruff</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/telekyb_serial</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Martin Riedel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>telekyb_defines</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>telekyb_defines</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>telekyb_defines</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ltelekyb_serial" cflags="-I${prefix}/include"/>
</export>

</package>
