<package>
  <name>telekyb_core</name>
  <version>3.0.0</version>
  <description>telekyb_core is flexible closed loop controller of the TeleKyb framework. 
		It combines Trajectory Controller, Behavior Controller, Behaviors, Sensors Input and Security Mechanisms.
  </description>
  <maintainer email="eugen.ruff@tuebingen.mpg.de">Eugen Ruff</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/telekyb</url>
  

  <author>Dr. Antonio Franchi and Martin Riedel</author>

  
  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>telekyb_defines</build_depend>
  <build_depend>telekyb_base</build_depend>
  <build_depend>telekyb_msgs</build_depend>
  <build_depend>tk_trajctrl</build_depend>
  <build_depend>tk_trajprocessor</build_depend>
  <build_depend>tk_behavior</build_depend>
  <build_depend>tk_state</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tk_ctrlalgo</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>telekyb_defines</run_depend>
  <run_depend>telekyb_base</run_depend>
  <run_depend>telekyb_msgs</run_depend>
  <run_depend>tk_trajctrl</run_depend>
  <run_depend>tk_trajprocessor</run_depend>
  <run_depend>tk_behavior</run_depend>
  <run_depend>tk_state</run_depend>
  <run_depend>tk_ctrlalgo</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  
  
  
  
  
  
  
  
  
  

</package>
