<package>
  <name>tk_exception</name>
  <version>1.0.0</version>
  <description>tk_exception. Exception Module for TeleKyb. Main Hub to send Exception. These get forwarded to telekyb_interface programs.</description>
  <maintainer email="antonio.franchi@tuebingen.mpg.de">Martin Riedel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/tk_exception</url>
  

  <author>Martin Riedel</author>

  
  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>roscpp</build_depend>
  <build_depend>telekyb_defines</build_depend>
  <build_depend>telekyb_base</build_depend>
  <build_depend>telekyb_msgs</build_depend>

  
  <run_depend>roscpp</run_depend>
  <run_depend>telekyb_defines</run_depend>
  <run_depend>telekyb_base</run_depend>
  <run_depend>telekyb_msgs</run_depend>

  
  
  
  
  

<!--This file was altered by an automated script. 
Trying to alter xml files to fullfill the requirements for the catkin hydro standart in ros. 
This means there maight be some tags which do not make sense I did my best to guess the correct answers.  -->
</package>
